# jade-ecosystem-assist

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/rules/: scaffold-metadata.md  session-hooks.md  settings.md
.claude/tasks/: tasks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  sync-submodules.yml
architecture/ascii/scaffolds/: claude-objects.md  dotfiles.md  jade-claude-settings.md  jade-cli.md  jade-dev-assist.md  jade-ide.md  jade-index.md  jade-swarm.md  jadecli-infra.md  jadecli-roadmap.md
architecture/mermaid/: README.md  claude-objects.mmd  jade-cli.mmd  jade-dev-assist.mmd
cli/: __init__.py  settings.py
docs/plans/: 2026-02-04-ecosystem-assist-enhancements.md  2026-02-04-jadecli-codespaces-patterns.md  2026-02-04-jadecli-patterns-implementation.md
local/linux/: README.md
local/macos/: README.md
local/windows/: README.md
scripts/: generate-context.sh  generate-dependency-matrix.sh  health-check.sh  load-settings.sh  query-scaffolds.sh  validate-scaffolds.sh
tests/: test_scaffold_metadata.py  test_session_hook.py  test_settings.py
